--- a/src/app/components/super-admin/categories/category/app-category-container/app-category-container.component.scss
+++ b/src/app/components/super-admin/categories/category/app-category-container/app-category-container.component.scss
@@ -6,18 +6,12 @@
 
 .counters-container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
   grid-auto-rows: min-content;
-  background-color: lightgreen;
+  // background-color: lightgreen;
   gap: 10px;
 
-  .counter-card {
-    width: 100%;
-    height: 200px;
-    border: 1px solid red;
-  }
-
-  @media (max-width: 1200px) {
+  @media (max-width: 1199px) {
     margin: 10px 0;
     grid-template-columns: repeat(3, 1fr);
   }
@@ -41,6 +35,6 @@
   }
 }
 
-.table-paginators-margin{
+.table-paginators-margin {
   margin: 20px 0;
 }
