--- a/src/app/components/super-admin/categories/category/app-category-container/app-category-container.component.html
+++ b/src/app/components/super-admin/categories/category/app-category-container/app-category-container.component.html
@@ -17,11 +17,20 @@
               aria-label="Example text with button addon"
               aria-describedby="button-addon1"
               (input)="searchFilter($event)">
-            <button (click)="this.isAddFormVisible = true"
+
+            <app-modal-action-button [modalId]="'pruebaModal'"
+              [buttonStyle]="'primary'"
+              [text]="'Agregar categoría'"
+              [icon]="'fas fa-plus'"
+              style="margin-left: 5px;">
+            </app-modal-action-button>
+
+
+            <!-- <button (click)="this.isAddFormVisible = true"
               class="btn btn-primary"
               style="margin-left: 5px;"
-              type="button"><i class="fas fa-plus
-              "></i> Nueva categoría</button>
+              type="button"> Nueva categoría</button> -->
+
           </div>
 
           <div class="table-paginators-margin">
@@ -89,41 +98,14 @@
       [style]="'danger'"> </app-card-number>
   </div>
 
+
+  <app-modal-container [modalId]="'pruebaModal'"
+    [headerText]="'Agregar categoría'"
+    [headerStyle]="'dark'">
+    <ng-template>
+      <app-category-add-form (onFinishForm)="loadCategories()"></app-category-add-form>
+    </ng-template>
+  </app-modal-container>
+
+
 </div>
-
-
-
-
-<!-- formulario -->
-<!-- <div class="col-md-12 col-lg-6"
-  *ngIf="isAddFormVisible">
-  <div class="card">
-    <div class="card-header">
-      <h4 class="card-title"> <i class="fas fa-plus
-          "></i> Agregar categoría</h4>
-    </div>
-    <div class="card-body">
-
-      <form [formGroup]="reactiveForm">
-        <div class="mb-3">
-          <label>Nombre</label>
-          <input type="text"
-            [class.valid]="this.reactiveForm.get('description')?.valid"
-            [class.fail]="this.reactiveForm.get('description')?.invalid && this.reactiveForm.get('description')?.touched"
-            class="form-control form-input"
-            formControlName="description">
-        </div>
-
-        <div class="row">
-          <app-general-buttons [isVisible_clean]="true"
-            [isVisible_save]="true"
-            [isDisabled_save]="!this.reactiveForm.valid"
-            [isVisible_cancel]="true"
-            (onCancel)="onCancelAddCategory()"
-            (onClean)="resetForm()"
-            (onSave)="onAddCategorySubmit()"></app-general-buttons>
-        </div>
-      </form>
-    </div>
-  </div>
-</div> -->
