ADDED: Created add category form

--- a/src/app/components/shared/app-switch-toggle/app-switch-toggle.component.html
+++ b/src/app/components/shared/app-switch-toggle/app-switch-toggle.component.html
@@ -1,4 +1,5 @@
 <label class="switch">
-  <input type="checkbox">
+  <input type="checkbox"
+    [(ngModel)]="value">
   <span class="slider round"></span>
 </label>
