ADD: Added switch toggle disabled logic and css

--- a/src/app/components/super-admin/categories/category/app-category-add-form/app-category-add-form.component.html
+++ b/src/app/components/super-admin/categories/category/app-category-add-form/app-category-add-form.component.html
@@ -10,7 +10,7 @@
         formControlName="description">
     </div>
     <div>
-      <app-switch-toggle>
+      <app-switch-toggle [trueText]="'Activo'">
       </app-switch-toggle>
     </div>
 
