--- a/src/app/components/shared/app-switch-toggle/app-switch-toggle.component.html
+++ b/src/app/components/shared/app-switch-toggle/app-switch-toggle.component.html
@@ -1,5 +1,10 @@
-<label class="switch">
-  <input type="checkbox"
-    [(ngModel)]="value">
-  <span class="slider round"></span>
-</label>
+<div class="toggle-container">
+  <label class="falseText">{{falseText}}</label>
+  <label class="switch">
+    <input type="checkbox"
+      [(ngModel)]="value"
+      [disabled]="isDisabled">
+    <span class="slider round"></span>
+  </label>
+  <label class="trueText">{{trueText}}</label>
+</div>
