--- a/src/app/components/shared/app-switch-toggle/app-switch-toggle.component.scss
+++ b/src/app/components/shared/app-switch-toggle/app-switch-toggle.component.scss
@@ -2,8 +2,9 @@
 .switch {
   position: relative;
   display: inline-block;
-  width: 60px;
-  height: 34px;
+  width: 40px;
+  height: 24px;
+  margin: 0 8px;
 }
 
 /* Hide default HTML checkbox */
@@ -29,17 +30,29 @@
 .slider:before {
   position: absolute;
   content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
+  height: 16px;
+  width: 16px;
+  left: 3px;
   bottom: 4px;
   background-color: white;
-  -webkit-transition: 0.4s;
   transition: 0.4s;
 }
 
-input:checked + .slider {
-  background-color: #2196f3;
+input {
+  &:disabled + .slider {
+    cursor: default;
+    background-color: #e7e7e7;
+  }
+
+  &:checked {
+    &:disabled + .slider {
+      cursor: default;
+      background-color: #a9d8ff;
+    }
+    + .slider {
+      background-color: #2196f3;
+    }
+  }
 }
 
 input:focus + .slider {
@@ -47,16 +60,21 @@ input:focus + .slider {
 }
 
 input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
+  -webkit-transform: translateX(17px);
+  -ms-transform: translateX(17px);
+  transform: translateX(17px);
 }
 
 /* Rounded sliders */
 .slider.round {
   border-radius: 34px;
-}
 
-.slider.round:before {
-  border-radius: 50%;
+  &:before {
+    border-radius: 50%;
+  }
+
+  .toggle-container {
+    display: flex;
+    align-items: center;
+  }
 }
