--- a/src/app/components/shared/app-loading-spinner/app-loading-spinner.component.scss
+++ b/src/app/components/shared/app-loading-spinner/app-loading-spinner.component.scss
@@ -1,4 +1,4 @@
-.container {
+.container-spinner {
   position: absolute;
   display: flex;
   align-items: center;
@@ -6,7 +6,7 @@
   width: 100%;
   height: 100%;
   opacity: 80%;
-  background-color: white;
+  background-color: rgb(255, 0, 0);
 }
 
 .lds-ripple {
