--- a/src/app/components/shared/app-loading-spinner/app-loading-spinner.component.scss
+++ b/src/app/components/shared/app-loading-spinner/app-loading-spinner.component.scss
@@ -6,7 +6,7 @@
   width: 100%;
   height: 100%;
   opacity: 80%;
-  background-color: rgb(255, 0, 0);
+  background-color: white;
 }
 
 .lds-ripple {
