FIX: toggle switch interactions with reactive form

--- a/src/app/components/super-admin/categories/category/app-category-add-form/app-category-add-form.component.html
+++ b/src/app/components/super-admin/categories/category/app-category-add-form/app-category-add-form.component.html
@@ -10,16 +10,20 @@
         formControlName="description">
     </div>
     <div>
-      <app-switch-toggle [trueText]="'Activo'" [value]="true">
+
+      <app-switch-toggle [trueText]="'Activo'"
+        [isDisabled]="true"
+        [value]="true">
       </app-switch-toggle>
     </div>
 
-    <div class="row">
-      <app-general-buttons [isVisible_clean]="true"
-        [isVisible_save]="true"
-        [isDisabled_save]="!this.reactiveForm.valid"
-        (onClean)="resetForm()"
-        (onSave)="onAddCategorySubmit()"></app-general-buttons>
-    </div>
   </form>
+
+  <div class="row">
+    <app-general-buttons [isVisible_clean]="true"
+      [isVisible_save]="true"
+      [isDisabled_save]="!this.reactiveForm.valid"
+      (onClean)="resetForm()"
+      (onSave)="onAddCategorySubmit()"></app-general-buttons>
+  </div>
 </div>
