--- a/src/app/components/super-admin/categories/category/app-category-container/app-category-container.component.scss
+++ b/src/app/components/super-admin/categories/category/app-category-container/app-category-container.component.scss
@@ -4,18 +4,18 @@
   flex-wrap: wrap-reverse;
 }
 
-.counters-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
-  grid-auto-rows: min-content;
-  // background-color: lightgreen;
-  gap: 10px;
+// .counters-container {
+//   display: grid;
+//   grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+//   grid-auto-rows: min-content;
+//   // background-color: lightgreen;
+//   gap: 10px;
 
-  @media (max-width: 1199px) {
-    margin: 10px 0;
-    grid-template-columns: repeat(3, 1fr);
-  }
-}
+//   @media (max-width: 1199px) {
+//     margin: 10px 0;
+//     grid-template-columns: repeat(3, 1fr);
+//   }
+// }
 
 .las.la-pen {
   color: rgb(36, 138, 221) !important;
