--- a/src/app/components/super-admin/categories/category/app-category-edit-form/app-category-edit-form.component.html
+++ b/src/app/components/super-admin/categories/category/app-category-edit-form/app-category-edit-form.component.html
@@ -43,6 +43,6 @@
       [isVisible_save]="true"
       [isDisabled_save]="!this.reactiveForm.valid"
       (onClean)="resetForm()"
-      (onSave)="onAddCategorySubmit()"></app-general-buttons>
+      (onSave)="updateCategorySubmit()"></app-general-buttons>
   </div>
 </div>
