--- a/src/app/components/shared/dropdowns/app-category-dropdown/app-category-dropdown.component.html
+++ b/src/app/components/shared/dropdowns/app-category-dropdown/app-category-dropdown.component.html
@@ -8,7 +8,7 @@
     [selected]="true">{{ placeholder }}</option>
 
   <option *ngFor="let item of categoryList; let i = index"
-    value="{{item.businessCategoryId}}">
+    value="{{item.id}}">
     {{item.description}}
   </option>
 
