--- a/src/app/components/super-admin/categories/category/app-category-edit-form/app-category-edit-form.component.html
+++ b/src/app/components/super-admin/categories/category/app-category-edit-form/app-category-edit-form.component.html
@@ -6,7 +6,7 @@
       <input type="text"
         class="form-control form-input"
         [disabled]="true"
-        [value]="selectedCategory.businessCategoryId">
+        [value]="selectedCategory.id">
     </div>
     <div class="mb-3">
       <label>Usuario (modificando)</label>
