ADD: edit form created

--- a/src/app/components/super-admin/categories/category/app-category-container/app-category-container.component.html
+++ b/src/app/components/super-admin/categories/category/app-category-container/app-category-container.component.html
@@ -105,7 +105,7 @@
   </app-modal-container>
 
   <app-modal-container [modalId]="'editCategory_modal'"
-    [headerText]="'Agregar categoría'"
+    [headerText]="'Editar categoría'"
     [headerStyle]="'dark'">
     <ng-template>
       <app-category-edit-form [selectedCategory]="editingCategory"
